# playbooks

./: Cargo.toml  README.md  Surfpool.toml
examples/: set_balance.rs
scripts/: airdrop.sh  init.sh  set_balance.sh  set_balance_working.sh
src/: error.rs  item.rs  lib.rs  main.rs  user.rs
